# tts-tools

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  pyproject.toml
nodejs-wrapper/: README.md  index.js  package-lock.json  package.json
src/minimal_pairs_audio/: __init__.py  cli.py  generator.py  input_adapters.py  manifest.py  models.py  utils.py  verifier.py
src/tts_tools/: __init__.py  async_generator.py  cli.py  config.py  generator.py  generic_generator.py  input_adapters.py  manifest.py  models.py  utils.py  verifier.py
