[project]
name = "minimal-pairs-audio"
version = "0.1.0"
description = "Audio generation and verification tools for minimal pairs language learning"
readme = "README.md"
authors = [
    { name = "Ian Hunt-Isaak", email = "ianhuntisaak@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "google-cloud-texttospeech>=2.16.3",
    "google-cloud-speech>=2.26.0",
    "rich>=13.7.1",
    "click>=8.1.7",
    "pydub>=0.25.1",
    "edit-distance>=1.0.6",
    "scipy>=1.11.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]

[project.scripts]
minimal-pairs-audio = "minimal_pairs_audio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
